04-apps/vault-ingress/ingress.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: vault-gateway
  namespace: vault
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - vault.ncostamagna.com
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vault
  namespace: vault
spec:
  hosts:
  - vault.ncostamagna.com
  gateways:
  - vault-gateway
  http:
  - route:
    - destination:
        host: devops-shared-svc-vault-ui
        port:
          number: 8200
